[package]
name = "http_server"
version = "0.1.0"
authors = ["yuta0801 <yuta030801@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = { version = "0.2.69", features = ["serde-serialize"]  }
js-sys = "0.3.46"
wasm-bindgen-futures = "0.4.19"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Request',
  'RequestInit',
  'Response',
  'Window',
]

